--- a/quem-somos.html
+++ b/quem-somos.html
@@ -24,14 +24,14 @@
       <h1 class="logo">Eiffel Engenharia e Projetos Elétricos</h1>
       <nav id="menu">
         <ul>
-          <li id="home" onmouseover="mudaFoto('home.png')" onmouseout="mudaFoto('home.png')" ;><a id="ah"
+          <li id="home" onmouseover="mudaFoto('home.png')" onmouseout="mudaFoto('quem-somos.png')" ;><a id="ah"
               href="index.html">Home</a></li>
-          <li id="nosso" onmouseover="mudaFoto('nossos-servicos.png')" onmouseout="mudaFoto('home.png')" ;>
+          <li id="nosso" onmouseover="mudaFoto('nossos-servicos.png')" onmouseout="mudaFoto('quem-somos.png')" ;>
             <a id="an" href="servicos.html">Serviços</a></li>
-          <li id="quem" onmouseover="mudaFoto('quem-somos.png')" onmouseout="mudaFoto('home.png')" ;><a
+          <li id="quem" onmouseover="mudaFoto('quem-somos.png')" onmouseout="mudaFoto('quem-somos.png')" ;><a
               id="aq" href="quem-somos.html">Quem
               somos?</a></li>
-          <li id="contat" onmouseover="mudaFoto('contato.png')" onmouseout="mudaFoto('home.png')" ;><a
+          <li id="contat" onmouseover="mudaFoto('contato.png')" onmouseout="mudaFoto('quem-somos.png')" ;><a
               id="ac" href="contato.html">Contato</a>
           </li>
         </ul>
@@ -39,25 +39,6 @@
       <img id="icone" class="icon" src="logo.png" style="width: 8%;" alt="icone" />
     </div>
   </header>
-
-  <section class="hero">
-    <div class="hero-text">
-      <h2>Conectamos sua ideia à energia do futuro.</h2>
-      <p>Falou em engenharia elétrica? Aqui é o lugar certo.</p>
-      <h3>Descubra quanto você irá economizar com Energia Solar</h3>
-      <a href="https://azume.com.br/simulador/67f56f9e0632670015582f1a" target="_blank" class="btn">Click e Descubra</a>
-    </div>
-  </section>
-
-  <section class="services" id="services">
-    <div class="service-list">
-      <h3></h3>
-      <div class="service" id="eng"><span class="top">Engenharia elétrica</span></div>
-      <div class="service" id="fot"><span class="top">Projetos fotovoltaicos</span></div>
-      <div class="service" id="ele"><span class="top">Projetos Elétricos</span></div>
-      <div class="service" id="lau"><span class="top">Laudos elétricos</span></div>
-    </div>
-  </section>
 
   <section id="sobre" class="sobre">
     <div class="quem-somos">
@@ -137,91 +118,7 @@
 
     </div>
   </section>
-
-  <div class="container-proj" id="projeto">
-    <h2>Meus Projetos</h2>
-  </div>
-  <section class="projetos">
-    <div class="container">
-      <div class="grid">
-        <div class="card">
-          <h3>Projeto: Santo André</h3>
-          <p>20 Módulos<br>Potência instalada 11.4KWp.</p>
-          <img class="projeto1" src="projeto1.jpeg" alt="projeto condomínio" width="400">
-        </div>
-        <div class="card">
-          <h3>Projeto: Santo André</h3>
-          <p>24 Módulos<br>Potência instalada 13.6KWp</p>
-          <img class="projeto1" src="projeto2.jpeg" alt="projeto condomínio" width="400">
-        </div>
-        <div class="card">
-          <h3>Projeto: Cambuci</h3>
-          <p>244 Módulos<br>Potência instalada 98.8KWp</p>
-          <img class="projeto1" src="projeto3.jpeg" alt="projeto condomínio" width="400">
-        </div>
-        <div class="card">
-          <h3>Projeto: Mogi das Cruzes</h3>
-          <p>07 Módulos<br>Potência instalada 3.9KWp</p>
-          <img class="projeto1" src="projeto4.jpeg" alt="projeto condomínio" width="400">
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="availability">
-    <h3>Horário de atendimento</h3>
-    <p>Seg - Sex: 08:00 - 17:00 | Sáb: 08:00 - 15:00</p>
-    <a href="https://wa.me/5511947136345" target="_blank" class="btn">Fazer Orçamento</a>
-  </section>
-  <section class="stylists">
-    <h3>Comentários</h3>
-    <p>Veja oque nossos clientes dizem sobre nossos servicos</p>
-    <a href="https://g.page/r/Cdmugjn8WOZzEBE/review" target="_blank" class="btn">Avaliar no Google</a>
-    <div class="stylist-list">
-      <div class="stylist">
-        <img src="comentario1.jpeg" alt="comentário 1" />
-        <h4>Nerly Mendes</h4>
-      </div>
-      <div class="stylist">
-        <img src="comentario2.jpeg" alt="comentário 2" />
-        <h4>Dayane Yamaguti</h4>
-      </div>
-      <div class="stylist">
-        <img src="comentario3.jpeg" alt="comentário 3" />
-        <h4>Tiago Stefano</h4>
-      </div>
-    </div>
-  </section>
-  <section class="conj">
-    <div class="container-cont" id="cont">
-      <h2>Contatos</h2>
-    </div>
-    <section id="contato" class="contato">
-      <div class="social-icons">
-        <p>
-          <a href="https://www.instagram.com/eiffelprojetos?igsh=MXFybzV3azF5ejJmbA==">
-            <i class="fab fa-instagram"></i></i> www.instagram.com/eiffelprojetos
-          </a>
-        </p>
-        <p>
-          <a href="https://wa.me/5511947136345" target="_blank">
-            <i class="fab fa-whatsapp"></i> WhatsApp (11) 94713-6345
-          </a>
-        </p>
-        <p>
-          <a href="mailto:projetos@eiffelprojetos.com.br">
-            <i class="fas fa-envelope"></i> E-mail projetos@eiffelprojetos.com.br
-          </a>
-        </p>
-        <p>
-          <a href="https://www.google.com/maps/dir/-23.5499441,-46.3739001/R.+Reinaldo+Leal,+86+-+Jardim+S%C3%A3o+Bernadino,+Suzano+-+SP,+08695-730/@-23.5209957,-46.4055574,12z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x94ce7976ce026193:0x515d6aa3b787b386!2m2!1d-46.273173!2d-23.494187?entry=ttu&g_ep=EgoyMDI1MDUwMy4wIKXMDSoASAFQAw%3D%3D"
-            target="_blank">
-            <i class="fa-solid fa-map-location-dot"></i></i> Rua reinald leal, 86 - Suzano - SP
-          </a>
-        </p>
-      </div>
-    </section>
-  </section>
+  
   <footer>
     <div class="wave">
       <svg viewBox="0 0 1440 320" preserveAspectRatio="none">
