--- a/servicos.html
+++ b/servicos.html
@@ -14,9 +14,10 @@
   <header>
     <div class="waooo">
       <svg viewBox="0 0 1440 250" preserveAspectRatio="none">
-        <path d="M0,20 C160,10 1080,130 1440,40 L1440,150 L0,150 Z" fill="#9b751c" />
-        <path d="M0,60 C160,30 1080,145 1440,80 L1440,150 L0,150 Z" fill="white" />
-        <path d="M0,115 C160,40 1080,170 1440,110 L1440,150 L0,150 Z" fill="#000" />
+        <path d="M0,0 C360,0 1080,0 1440,0 L1440,320 L0,320 Z" fill="#000000" />
+        <path d="M0,90 C360,60 1080,280 1440,140 L1440,320 L0,320 Z" fill="#ffffff" />
+        <path d="M0,160 C360,40 1080,310 1440,200 L1440,320 L0,320 Z" fill="#a57c1b" />
+        <path d="M0,250 C360,50 1080,300 1440,290 L1440,400 L0,400 Z" fill="#ffffff" />
       </svg>
     </div>
     <div class="container">
