--- a/contato.html
+++ b/contato.html
@@ -67,6 +67,32 @@
       </div>
     </section>
   </section>
+
+<section class="availability">
+    <h3>Horário de atendimento</h3>
+    <p>Seg - Sex: 08:00 - 17:00 | Sáb: 08:00 - 15:00</p>
+    <a href="https://wa.me/5511947136345" target="_blank" class="btn">Fazer Orçamento</a>
+  </section>
+  <section class="stylists">
+    <h3>Comentários</h3>
+    <p>Veja oque nossos clientes dizem sobre nossos servicos</p>
+    <a href="https://g.page/r/Cdmugjn8WOZzEBE/review" target="_blank" class="btn">Avaliar no Google</a>
+    <div class="stylist-list">
+      <div class="stylist">
+        <img src="comentario1.jpeg" alt="comentário 1" />
+        <h4>Nerly Mendes</h4>
+      </div>
+      <div class="stylist">
+        <img src="comentario2.jpeg" alt="comentário 2" />
+        <h4>Dayane Yamaguti</h4>
+      </div>
+      <div class="stylist">
+        <img src="comentario3.jpeg" alt="comentário 3" />
+        <h4>Tiago Stefano</h4>
+      </div>
+    </div>
+  </section>
+  
   <footer>
     <div class="wave">
       <svg viewBox="0 0 1440 320" preserveAspectRatio="none">
