--- a/servicos.html
+++ b/servicos.html
@@ -40,6 +40,15 @@
       <img id="icone" class="icon" src="logo.png" style="width: 8%;" alt="icone" />
     </div>
   </header>
+<section class="services" id="services">
+    <div class="service-list">
+      <h3></h3>
+      <div class="service" id="eng"><span class="top">Engenharia elétrica</span></div>
+      <div class="service" id="fot"><span class="top">Projetos fotovoltaicos</span></div>
+      <div class="service" id="ele"><span class="top">Projetos Elétricos</span></div>
+      <div class="service" id="lau"><span class="top">Laudos elétricos</span></div>
+    </div>
+  </section>
 
   <div class="container-proj" id="projeto">
     <h2>Meus Projetos</h2>
