--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </svg>
     </div>
     <div class="container">
-      <img src="img-completo.jpeg" alt="logo" />
+      <img src="img-completo.jpeg" alt="home" />
       <h1 class="logo">Eiffel Engenharia e Projetos Elétricos</h1>
       <nav id="menu">
         <ul>
