--- a/contato.html
+++ b/contato.html
@@ -37,7 +37,7 @@
           </li>
         </ul>
       </nav>
-      <img id="icone" class="icon" src="logo.png" style="width: 8%;" alt="icone" />
+      <img id="icone" class="icon" src="contato.png" style="width: 8%;" alt="icone" />
     </div>
   </header>
 
