--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </svg>
     </div>
     <div class="container">
-      <img src="img-completo.jpeg" alt="home" />
+      <img src="img-completo.jpeg" alt="logo" />
       <h1 class="logo">Eiffel Engenharia e Projetos Elétricos</h1>
       <nav id="menu">
         <ul>
@@ -37,7 +37,7 @@
           </li>
         </ul>
       </nav>
-      <img id="icone" class="icon" src="logo.png" style="width: 8%;" alt="icone" />
+      <img id="icone" class="icon" src="home.png" style="width: 8%;" alt="icone" />
     </div>
   </header>
 
