--- a/servicos.html
+++ b/servicos.html
@@ -37,7 +37,7 @@
           </li>
         </ul>
       </nav>
-      <img id="icone" class="icon" src="servicos.png" style="width: 8%;" alt="icone" />
+      <img id="icone" class="icon" src="nossos-servicos.png" style="width: 8%;" alt="icone" />
     </div>
   </header>
 <section class="services" id="services">
