--- a/quem-somos.html
+++ b/quem-somos.html
@@ -37,7 +37,7 @@
           </li>
         </ul>
       </nav>
-      <img id="icone" class="icon" src="home.png" style="width: 8%;" alt="icone" />
+      <img id="icone" class="icon" src="quem-somos.png" style="width: 8%;" alt="icone" />
     </div>
   </header>
 
