--- a/servicos.html
+++ b/servicos.html
@@ -40,6 +40,25 @@
       <img id="icone" class="icon" src="nossos-servicos.png" style="width: 8%;" alt="icone" />
     </div>
   </header>
+
+  <div class="prevent" >
+    <h2>Preventivas</h2>
+
+  </div>
+
+  <div class="secao-video">
+    <video autoplay muted loop>
+      <source src="gif-lpz.mp4" type="video/mp4">
+      Seu navegador não suporta vídeos HTML5.
+    </video>
+    <div class="conteudo">
+      <div class="service" id="limpeza1"></div>
+      <div class="service" id="limpeza2"></div>
+      <div class="service" id="limpeza3"></div>
+      <div class="service" id="limpeza4"></div>
+    </div>
+  </div>
+
 <section class="services" id="services">
     <div class="service-list">
       <h3></h3>
