--- a/servicos.html
+++ b/servicos.html
@@ -76,27 +76,56 @@
     <div class="container">
       <div class="grid">
         <div class="card">
-          <h3>Projeto: Santo André</h3>
-          <p>20 Módulos<br>Potência instalada 11.4KWp.</p>
+          <h3>Projeto: Suzano</h3>
+          <p>210 Módulos<br>Potência instalada 139.7 KWp.</p>
           <img class="projeto1" src="projeto1.jpeg" alt="projeto condomínio" width="400">
         </div>
         <div class="card">
-          <h3>Projeto: Santo André</h3>
-          <p>24 Módulos<br>Potência instalada 13.6KWp</p>
+          <h3>Projeto: Cambuci</h3>
+          <p>244 Módulos<br>Potência instalada 98.8 KWp</p>
           <img class="projeto1" src="projeto2.jpeg" alt="projeto condomínio" width="400">
         </div>
         <div class="card">
-          <h3>Projeto: Cambuci</h3>
-          <p>244 Módulos<br>Potência instalada 98.8KWp</p>
+          <h3>Projeto: Poá</h3>
+          <p>77 Módulos<br>Potência instalada 42.5 KWp</p>
           <img class="projeto1" src="projeto3.jpeg" alt="projeto condomínio" width="400">
         </div>
         <div class="card">
-          <h3>Projeto: Mogi das Cruzes</h3>
-          <p>07 Módulos<br>Potência instalada 3.9KWp</p>
+          <h3>Projeto: Itaim Paulista</h3>
+          <p>56 Módulos<br>Potência instalada 35.2 KWp</p>
           <img class="projeto1" src="projeto4.jpeg" alt="projeto condomínio" width="400">
         </div>
+        <div class="card">
+          <h3>Projeto: Santo André</h3>
+          <p>24 Módulos<br>Potência instalada 13.6 KWp</p>
+          <img class="projeto1" src="projeto5.jpeg" alt="projeto condomínio" width="400">
+        </div>
+        <div class="card">
+          <h3>Projeto: São Bernardo dos Campos</h3>
+          <p>24 Módulos<br>Potência instalada 14 KWp</p>
+          <img class="projeto1" src="projeto6.jpeg" alt="projeto condomínio" width="400">
+        </div>
+        <div class="card">
+          <h3>Vila Mariana</h3>
+          <p>23 Módulos<br>Potência instalada 13.1 KWp</p>
+          <img class="projeto1" src="projeto7.jpeg" alt="projeto condomínio" width="400">
+        </div>
+        <div class="card">
+          <h3>Projeto: Santo André</h3>
+          <p>20 Módulos<br>Potência instalada 11.4 KWp.</p>
+          <img class="projeto1" src="projeto8.jpeg" alt="projeto condomínio" width="400">
+        </div>
+        <div class="card">
+          <h3>Projeto: Guarulhos</h3>
+          <p>16 Módulos<br>Potência instalada 9.3 KWp.</p>
+          <img class="projeto1" src="projeto9.jpeg" alt="projeto condomínio" width="400">
+        </div>
+        <div class="card">
+          <h3>Projeto: Mogi das Cruzes</h3>
+          <p>07 Módulos<br>Potência instalada 3.9 KWp</p>
+          <img class="projeto1" src="projeto10.jpeg" alt="projeto condomínio" width="400">
+        </div>
       </div>
-    </div>
   </section>
 
   <footer>
