--- a/servicos.html
+++ b/servicos.html
@@ -17,7 +17,7 @@
         <path d="M0,0 C360,0 1080,0 1440,0 L1440,320 L0,320 Z" fill="#000000" />
         <path d="M0,90 C360,60 1080,280 1440,140 L1440,320 L0,320 Z" fill="#ffffff" />
         <path d="M0,160 C360,40 1080,310 1440,200 L1440,320 L0,320 Z" fill="#a57c1b" />
-        <path d="M0,250 C360,50 1080,300 1440,290 L1440,400 L0,400 Z" fill="#ffffff" />
+        <path d="M0,250 C360,50 1080,300 1440,290 L1440,400 L0,400 Z" fill="#000000" />
       </svg>
     </div>
     <div class="container">
