--- a/contato.html
+++ b/contato.html
@@ -30,8 +30,7 @@
           <li id="nosso" onmouseover="mudaFoto('nossos-servicos.png')" onmouseout="mudaFoto('contato.png')" ;>
             <a id="an" href="servicos.html">Serviços</a></li>
           <li id="quem" onmouseover="mudaFoto('quem-somos.png')" onmouseout="mudaFoto('contato.png')" ;><a
-              id="aq" href="quem-somos.html">Quem
-              somos?</a></li>
+              id="aq" href="quem-somos.html">Sobre</a></li>
           <li id="contat" onmouseover="mudaFoto('contato.png')" onmouseout="mudaFoto('contato.png')" ;><a
               id="ac" href="contato.html">Contato</a>
           </li>
